WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39775
[Qt] FileSystemQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39775
Summary
[Qt] FileSystemQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:35:36 PDT
WebCore/platform/qt/FileSystemQt.cpp:38: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/FileSystemQt.cpp:41: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/FileSystemQt.cpp:42: "QDateTime" already included at WebCore/platform/qt/FileSystemQt.cpp:38 [build/include] [4] Total errors found: 3 in 1 files
Attachments
Patch that fixes the coding style issues
(2.05 KB, patch)
2010-05-26 14:45 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(2.10 KB, patch)
2010-06-04 20:18 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:45:23 PDT
Created
attachment 57156
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:51:04 PDT
QtTriaged
David Levin
Comment 3
2010-05-27 11:13:21 PDT
Comment on
attachment 57156
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 20:18:47 PDT
Created
attachment 57951
[details]
Patch
WebKit Commit Bot
Comment 5
2010-06-05 03:52:43 PDT
Comment on
attachment 57951
[details]
Patch Clearing flags on attachment: 57951 Committed
r60747
: <
http://trac.webkit.org/changeset/60747
>
WebKit Commit Bot
Comment 6
2010-06-05 03:52:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug